I created a script file that holds logic for card reading, based choosen click events

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 			<img id="card3" class="card" src="Images/CardBack.jpg">
 	</div>
 
-	<div class="message">
+	<div id="message" class="message-wrapper">
 		<p>Here, Here... to the future!
 		</p>
 	</div>
-
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
