final changes to basic game

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 			<img id="card3" class="card" src="Images/CardBack.jpg">
 	</div>
 
-	<div id="message" class="message-wrapper">
-		<p>Here, Here... to the future!
+	<div class="message-wrapper">
+		<p id="message">Here, Here... to the future!
 		</p>
 	</div>
 	<script type="text/javascript" src="script.js"></script>
